templates/uaa-service.yml
#@ load("@ytt:data", "data")

apiVersion: v1
kind: Service
metadata:
  labels:
    service: uaa
  name: uaa
spec:
  ports:
    - name: "uaa-port"
      port: #@ data.values.uaa.port
      targetPort: #@ data.values.uaa.port
  selector:
    service: uaa
